# hpf

./: .gitignore  AUTHORS  BENCHMARK_TESTING.md  CMakeLists.txt  CTestConfig.cmake  ChangeLog  README  README.md  UPDATED_APPROACH.md  benchmark-index.html  vds_performance_comparison.md
.github/scripts/: combine_benchmark_results.py  create_benchmark_plots.py  create_grouped_benchmark_data.py  create_grouped_plots.py  create_index_html.py  parse_catch2_results.py  parse_catch2_results_mac.py  parse_catch2_results_win.py
.github/workflows/: cmake_dev.yml  cron_dev.yml  daily.yml  daily_mac.yml  daily_win.yml  dispatch_dev.yml  process-benchmark-data-mac.yml  process-benchmark-data-win.yml  process-benchmark-data.yml  spack_dev.yml
benchmarks/: data.js  data_grouped.js  index.html  index_grouped.html
benchmarks_mac/: data.js  data_grouped.js  index_grouped.html
benchmarks_win/: data.js  data_grouped.js
dev/bench/: data.js  data_2021.js  data_2022.js  data_2023.js  data_2024.js  index_2021.html  index_2022.html  index_2023.html  index_2024.html  index_2025.html
include/: CAPIShell.h  MultiArg.h  ValueArg.h
scripts/: runTest.cmake
src/: CAPIShell.cpp  Date.cpp  Env.cpp  EnvOwner.cpp  FileStorage.cpp  HandleManager.cpp  Host.cpp  LibUtil.cpp  Lookup.cpp  LookupEntry.cpp  MySQLStorage.cpp  PO.cpp  StorageManager.cpp  TestAction.cpp  TestInstance.cpp  TestRoutine.cpp  TestUtil.cpp  Version.cpp  append_1unlim_chunks.c  append_2unlim_chunks.c  attributes.c  cmpd_subset.c  cmpd_subset.cpp  commandline_capi.c  create.cpp  disjoint_hyperslab_select.c  efc_bench.c  efc_no.c  efc_no.cpp  extend_early_alloc.c  file.cpp  freespace.c  linear_cached_io.c  many_dsets.cpp  mysql.cpp  simple_capi.c  storage_capi.c  vds.cpp  write.c  write2.c
src/examples/cpp/: Makefile.am  many_dsets.cpp
src/lib/cpp/: TestInstance.cpp  TestUtil.cpp
www/: 0.php  1.php  2.php  3.php  4.php  5.php  6.php  TestAction.php  TestAction2.php  TestInstance.php  TestRoutine.php  TestRoutineA.php  analyzer.php  cal2.js  cal_conf2.js  checker.php  checker_best.php  daily.php  doc.html  environment.php  environment_v.php  graph.php  graph_version.php  hdf5_perf.ppt  hdf5_perf.pptx  index.html  index.php  journal.php  journal1.php  journal2.php  journal_v.php  mailer.php  record_manually.php  record_manually_1.php  record_manually_w.php  replace.php  replace_action_id.php  replace_action_name.php  replace_instance_name.php  replace_journal.php  (+21 more)
www/includes/: array.inc.php  error.inc.php  style.css
www/includes/.svn/: entries
www/includes/.svn/text-base/: connect.inc.php.svn-base  data.inc.php.svn-base  data.test.php.svn-base
www/jpgraph/.svn/: entries
www/jpgraph/docs/.svn/: entries
www/jpgraph/docs/html/.svn/: entries
www/jpgraph/docs/html/exframes/.svn/: entries
www/jpgraph/docs/ref/.svn/: entries
www/jpgraph/src/: jpg-config.inc.php
www/jpgraph/src/.svn/: entries
www/jpgraph/src/.svn/text-base/: CHANGELOG.svn-base
www/jpgraph/src/barcode/.svn/: entries
www/jpgraph/src/barcode/demoapp/.svn/: entries
www/jpgraph/src/barcode/examples/.svn/: entries
www/jpgraph/src/fonts/.svn/: entries
www/jpgraph/src/lang/.svn/: entries
www/jpgraph/src/themes/.svn/: entries
www/user_manual/: book.docx  book.fot  book.tex  book.txt  c130.html  c14.html  c140.html  c141.html  c142.html  c143.html  c144.html  c149.html  c156.html  c157.html  c158.html  c161.html  c165.html  c166.html  c168.html  c170.html  c171.html  c175.html  c176.html  c179.html  c180.html  c183.html  c186.html  c187.html  c191.html  c196.html  c199.html  c200.html  c201.html  c203.html  c207.html  c211.html  c212.html  c214.html  c215.html  c216.html  (+120 more)
www/user_manual/.svn/: entries
www/user_manual/.svn/text-base/: Makefile.svn-base  Makefile~.svn-base  book.dvi.svn-base  book.ps.svn-base  book.rtf.svn-base  book.xml.svn-base  book.xml~.svn-base  book1.html.svn-base  c137.html.svn-base  c146.html.svn-base  c151.html.svn-base  c152.html.svn-base  c155.html.svn-base  c159.html.svn-base  c160.html.svn-base  c163.html.svn-base  c164.html.svn-base  c167.html.svn-base  c172.html.svn-base  c177.html.svn-base  c178.html.svn-base  c181.html.svn-base  c185.html.svn-base  c194.html.svn-base  c197.html.svn-base  c202.html.svn-base  c204.html.svn-base  c205.html.svn-base  c206.html.svn-base  c219.html.svn-base  c221.html.svn-base  c223.html.svn-base  c224.html.svn-base  c227.html.svn-base  c228.html.svn-base  c229.html.svn-base  c232.html.svn-base  c234.html.svn-base  c235.html.svn-base  c236.html.svn-base  (+106 more)
